--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^18.3.1",
     "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^6.26.2",
-    "swiper": "^11.1.14"
+    "swiper": "^11.1.14",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
